--- a/index.html
+++ b/index.html
@@ -1,52 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body>
+</head>
 
-<section class="card card-body">
-    <div class="w-50 m-auto">
-        <h1>IBGE</h1>
-        <hr>
-        <form action="">
-            <div class="d-flex flex-column mr-2  gap-2 mt-2">
-                <label for="regiao" class="mt-2">regiao:</label>
-                <select name="" id="regiao" class="form-select">
-                    <option value="">--regiao--</option>
-                </select>
-            </div>
-            <div class="d-flex flex-column mr-2  gap-2 mt-2">
-                <label for="estado" class="mt-2">estado:</label>
-                <select name="" id="estado" class="form-select">
-                    <option value="">--estado--</option>
-                </select>
-            </div>
-            <div class="d-flex flex-column mr-2  gap-2 mt-2">
-                <label for="cidade" class="mt-2">cidade:</label>
-                <select name="" id="cidade" class="form-select">
-                    <option value="">--cidade--</option>
-                </select>
-            </div>
-            <button class="btn btn-primary w-100 mt-3">Pronto</button>
-        </form>
-    </div>
-</section>
+<body>
 
-    
+    <section class="card card-body">
+        <div class="w-50 m-auto">
+            <h1>IBGE</h1>
+            <hr>
+            <form action="">
+                <div class="d-flex flex-column mr-2  gap-2 mt-2">
+                    <label for="regiao" class="mt-2">regiao:</label>
+                    <select onchange="atualizarEstados()" name="" id="regiao" class="form-select">
+                        <option value="">--regiao--</option>
+                    </select>
+                </div>
+                <div class="d-flex flex-column mr-2  gap-2 mt-2">
+                    <label for="estado" class="mt-2">estado:</label>
+                    <select onchange="atualizarCidades()" name="" id="estado" class="form-select">
+                        <option value="">--estado--</option>
+                    </select>
+                </div>
+                <div class="d-flex flex-column mr-2  gap-2 mt-2">
+                    <label for="cidade" class="mt-2">cidade:</label>
+                    <select name="" id="cidade" class="form-select">
+                        <option value="">--cidade--</option>
+                    </select>
+                </div>
+                <button class="btn btn-primary w-100 mt-3">Pronto</button>
+            </form>
+        </div>
+    </section>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="js/eventos.js"></script>
 
 
-  </body>
+</body>
+
 </html>
